# formatlab-studio

./: .env.example  .gitignore  FINAL_STATUS.md  GITHUB_AUTHENTICATION.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  LOVABLE_PROMPT_COPY_PASTE.md  N8N_SETUP.md  PUSH_TO_GITHUB.sh  QUICK_START.md  README.md  docker-compose.yml  railway.json
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py  settings.py
backend/app/routers/: analyze.py  export.py  generate.py  health.py  translate.py
backend/app/services/: cerebras_translator.py  drift.py  fibo_client.py  hdr16.py  n8n_client.py  patcher.py  storage.py  timeline_store.py  translator.py
docs/: LOVABLE_FRONTEND_PROMPT.md  demo_script.md
examples/: base_scene.json
examples/patch_examples/: edit_001.patch.json
frontend/: next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/src/components/: NaturalLanguageBar.tsx  StudioShell.tsx  UploadDropzone.tsx
n8n-workflows/: analyze-workflow.json  export-workflow.json  generate-workflow.json  translate-workflow.json
schemas/: formatlab.patch.schema.json  formatlab.scene.schema.json
