[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "formatlab-studio"
version = "1.0.0"
description = "Professional JSON-driven visual generation and editing for Bria FIBO"
authors = [{name = "FormatLab", email = "team@formatlab.studio"}]

[project.dependencies]
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-multipart = "^0.0.6"
jsonpatch = "^1.33"
pillow = "^10.1.0"
numpy = "^1.24.0"
aiofiles = "^23.2.1"

[project.optional-dependencies]
dev = [
    "pytest = "^7.4.0",
    "pytest-asyncio = "^0.21.0",
    "black = "^23.12.0",
    "ruff = "^0.1.8"
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.black]
line-length = 88
target-version = ["py311"]
